@@ -29,6 +29,7 @@
   arbitrary distributed resource manager option (e.g. for SGE -p sets
   priority, -l sets a resource requirement, etc.)
 * segway: log memory and CPU usage to log/res_usage.tab
+* segway: eliminate mysterious bug relating to segway.inc and relative paths
 
 0.1.10:
 
